1.16
    * Added random password generator
    * Added random firstname, lastname and email generator

1.15 (2014-05-13)
    * Added symfony user encoder helper class

1.14 (2014-05-13)
    * Added check for browser from useragent

1.13 (2014-04-06)
    * Added readme for basic stuff

1.12 (2014-03-15)
    * Added more dynamic title and description

1.11 (2014-03-08)
    * Removed unusable blocks from fields.html.twig
    * Added slugify function

1.10 (2014-02-18)
    * Added fileextension for prettify filesize
    * Fixed JQueryBirthday form
    * Fixed JQueryDateType form

1.9 (2014-02-05)
    * Added datepicker firstDay parameter

1.8 (2013-12-27)
    * Added background-color to colorpickers input field

1.7 (2013-12-25)
    * Added colorpicker jquery module
    * Fixed tinymce, add and remove image and media plugins

1.6 (2013-11-02)
    * Added more stuff to admin view
    * Added language_url support

1.5 (2013-09-16)
    * Added source code to the toolbar
    * Default paste as plain text

1.4 (2013-09-16)
    * Upgraded tinymce to version 4.x, and uses the CDN instead of self hosted code.

1.3 (2013-05-19)
    * Rename service doctrine.orm.entity_manager to doctrine.orm.default_entity_manager

1.2 (2013-05-13)
    * Fixed TinyMCE form

1.1 (2013-05-07)
    * Made the help form extension compatible with symfony 2.3