@@ -19,3 +19,16 @@ twig:
 Remember if you use the tinymce form, you will properly want to disble form validation:
 
 <form novalidate="true">
+
+Added html slider:
+
+<ul id="slideshow">
+    <li class="active">Demo 1</li>
+    <li>Demo 2</li>
+    <li>Demo 3</li>
+</ul>
+
+<link href="bundles/clubformextra/css/slideshow.css" />
+<script src="bundles/clubformextra/js/slideshow.css"></script>
+
+That will add a slideshow for you.
