@@ -1,0 +1,14 @@
+ul#slideshow {
+    position:relative;
+    height:100%;
+    list-style-type: none;
+}
+ul#slideshow li {
+    position:absolute;
+    top:0;
+    left:0;
+    visibility: hidden;
+}
+ul#slideshow li.active {
+    visibility: visible;
+}
